Fix alignment of navbar

--- a/style.css
+++ b/style.css
@@ -507,7 +507,7 @@ footer {
 
   .header {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     gap: 2rem;
   }
 
